<resources>
    <string name="app_name">智能巡更</string>
    <string name="get_code">获取验证码</string>
    <string name="code">验证码</string>
    <string name="phone_num">手机号</string>
    <string name="account">账号</string>
    <string name="welcome_join">欢迎您的加入！</string>
    <string name="login">登录</string>
    <string name="work_space">工作台</string>
    <string name="mine">我的</string>
    <string name="start_check">开始巡更</string>
    <string name="error_report">故障上报</string>
    <string name="left_remind">漏检提醒</string>
    <string name="bind_location">绑定点位</string>
    <string name="error_record">故障记录</string>
    <string name="select_task">选择班次</string>
    <string name="version_update">版本更新</string>
    <string name="login_out">退出登录</string>
    <string name="start">开始</string>
    <string name="normal">正常</string>
    <string name="abnormal">异常</string>
    <string name="must_select">(必选)</string>
    <string name="error_type">故障类型</string>
    <string name="error_location">故障地点</string>
    <string name="upload_photo">拍照留证</string>
    <string name="submit">提交</string>
    <string name="album">从手机相册中选择</string>
    <string name="camera">拍照</string>
    <string name="cancel">取消</string>
    <string name="to_bind">去绑定</string>
    <string name="error_time">故障时段</string>
    <string name="schedule">班次</string>
    <string name="time">时间</string>
    <string name="location">地点</string>
    <string name="location_remark">地点备注</string>
    <string name="error_content">故障内容</string>
    <string name="confirm">确认</string>
    <string name="password">密码</string>
</resources>
