<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lib_white">

    <View
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/main" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:text="@string/welcome_join"
        android:textColor="#ffffffff"
        android:textSize="30sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="160dp"
        android:layout_marginRight="20dp"
        style="@style/CustomAppTheme_TextInputLayout"
        android:background="@drawable/shape_solid_white_6_r"
        android:elevation="5dp"
        android:gravity="bottom"
        android:paddingTop="10dp">

        <EditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/account"
            android:maxLength="11"
            android:textColor="@color/lib_normal" />
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:background="@drawable/shape_solid_white_6_r"
        android:id="@+id/rl_2"
        android:elevation="5dp"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@id/edit_1"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/shape_solid_white_6_r"
            android:gravity="bottom"
            android:paddingTop="10dp"
            style="@style/CustomAppTheme_TextInputLayout">

            <EditText
                android:inputType="textPassword"
                android:id="@+id/et_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/password"
                android:textColor="@color/lib_normal" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:visibility="gone"
            android:onClick="countdown"
            android:id="@+id/tv_countdown"
            android:gravity="center"
            android:textSize="@dimen/sp_10"
            android:textColor="@color/main"
            android:text="@string/get_code"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/shape_solid_fafafa_6_r"
            android:layout_width="80dp"
            android:layout_height="30dp"/>
    </RelativeLayout>

    <Button
        android:onClick="login"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@color/lib_white"
        android:text="@string/login"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="120dp"
        android:layout_below="@+id/rl_2"
        android:background="@drawable/shape_solid_blue_6_r"
        android:layout_width="match_parent"
        android:layout_height="46dp"/>

    <TextView
        android:visibility="gone"
        android:layout_marginTop="20dp"
        android:id="@+id/tv_host"
        android:layout_alignParentRight="true"
        android:padding="20dp"
        android:textColor="@color/lib_white"
        android:text="HOST"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</RelativeLayout>
