<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <View
            android:alpha="0.4"
            android:background="@color/lib_black"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"
            android:layout_marginTop="10dp"
            android:id="@+id/tv_cancel"
            android:gravity="center"
            android:background="@drawable/shape_solid_white_6_r"
            android:elevation="5dp"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:text="@string/cancel"
            android:textColor="#ff333333"
            android:textSize="18sp"
            />

        <LinearLayout
            android:layout_above="@+id/tv_cancel"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            android:background="@drawable/shape_solid_white_6_r"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_camera"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:text="@string/camera"
                android:textColor="#ff333333"
                android:textSize="18sp"
                />
            <View
                android:background="#fff5f5f5"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>
            <TextView
                android:id="@+id/tv_album"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:text="@string/album"
                android:textColor="#ff333333"
                android:textSize="18sp"
                />
        </LinearLayout>


    </RelativeLayout>
</LinearLayout>
