<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lib_white"
    android:fitsSystemWindows="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/mine"
        android:textColor="@color/lib_normal"
        android:textSize="18sp" />

    <RelativeLayout
        android:id="@+id/rl_person"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp">

        <ImageView
            android:id="@+id/head_pic"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="15dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/head_pic" />
        <LinearLayout
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="107dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="李晓梅"
                android:textColor="#ff959595"
                android:textSize="18sp" />

            <TextView
                android:visibility="gone"
                android:id="@+id/tv_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="#ff959595"
                android:textSize="18sp" />

        </LinearLayout>
        <ImageView
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/arrow_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <View
        android:id="@+id/view_1"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginTop="160dp"
        android:background="#fff5f5f5" />

    <TextView
        android:drawableEnd="@drawable/arrow_right"
        android:id="@+id/tv_error_record"
        android:gravity="center_vertical"
        android:layout_below="@id/view_1"
        android:textColor="#ff9b9b9b"
        android:textSize="16sp"
        android:text="@string/error_record"
        android:drawableStart="@mipmap/error_record"
        android:paddingStart="17dp"
        android:drawablePadding="10dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"/>

    <View
        android:id="@+id/view_2"
        android:layout_below="@id/tv_error_record"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#fff5f5f5" />

    <TextView
        android:drawableEnd="@drawable/arrow_right"
        android:id="@+id/tv_select_task"
        android:gravity="center_vertical"
        android:layout_below="@id/view_2"
        android:textColor="#ff9b9b9b"
        android:textSize="16sp"
        android:text="@string/select_task"
        android:drawableStart="@mipmap/select_task"
        android:paddingStart="17dp"
        android:drawablePadding="10dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"/>

    <View
        android:id="@+id/view_3"
        android:layout_below="@id/tv_select_task"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#fff5f5f5" />

    <RelativeLayout
        android:id="@+id/rl_update"
        android:layout_below="@id/view_3"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:drawableStart="@mipmap/select_task"
            android:id="@+id/tv_update"
            android:gravity="center_vertical"
            android:textColor="#ff9b9b9b"
            android:textSize="16sp"
            android:text="@string/version_update"
            android:paddingStart="17dp"
            android:drawablePadding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="40dp"/>
        <TextView
            android:drawableEnd="@drawable/arrow_right"
            android:layout_alignParentRight="true"
            android:id="@+id/tv_version_name"
            android:gravity="center_vertical"
            android:textColor="#ff9b9b9b"
            android:textSize="16sp"
            android:drawablePadding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="40dp"/>
    </RelativeLayout>


    <View
        android:layout_below="@id/rl_update"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#fff5f5f5" />

    <Button
        android:id="@+id/btn_login_out"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@color/lib_white"
        android:text="@string/login_out"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="410dp"
        android:background="@drawable/shape_solid_blue_6_r"
        android:layout_width="match_parent"
        android:layout_height="46dp"/>
</RelativeLayout>
