<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:title="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lib_white">

    <com.cbb.baselib.view.TitleView
        android:id="@+id/title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        title:left_img_visible="true"
        title:title_text="故障上报"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#fff5f5f5" />

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/rl_error_type"
        android:paddingStart="20dp"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:id="@+id/tv_type"
            android:drawablePadding="10dp"
            android:drawableStart="@mipmap/icon_error_type"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_type"
            android:textColor="#ff333333"
            android:textSize="16sp"
            />

        <TextView
            android:layout_marginStart="2dp"
            android:layout_toEndOf="@id/tv_type"
            android:drawablePadding="4dp"
            android:drawableStart="@mipmap/stars"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/must_select"
            android:textColor="#ff333333"
            android:textSize="16sp"
            />
        <ImageView
            android:layout_marginEnd="15dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/arrow_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#fff5f5f5" />
    <RelativeLayout
        android:id="@+id/rl_error_location"
        android:paddingStart="20dp"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:id="@+id/tv_location"
            android:drawablePadding="10dp"
            android:drawableStart="@mipmap/icon_error_location"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_location"
            android:textColor="#ff333333"
            android:textSize="16sp"
            />

        <TextView
            android:visibility="gone"
            android:layout_marginStart="2dp"
            android:layout_toEndOf="@id/tv_location"
            android:drawablePadding="4dp"
            android:drawableStart="@mipmap/stars"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/must_select"
            android:textColor="#ff333333"
            android:textSize="16sp"
            />


        <ImageView
            android:id="@+id/iv_arrow"
            android:layout_marginEnd="15dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/arrow_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_location_name"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@id/iv_arrow"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ff333333"
            android:textSize="16sp"
            />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#fff5f5f5" />
    <RelativeLayout
        android:paddingStart="20dp"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:id="@+id/tv_content"
            android:drawablePadding="10dp"
            android:drawableStart="@mipmap/icon_error_content"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_content"
            android:textColor="#ff333333"
            android:textSize="16sp"
            />

        <TextView
            android:layout_marginStart="2dp"
            android:layout_toEndOf="@id/tv_content"
            android:drawablePadding="4dp"
            android:drawableStart="@mipmap/stars"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="必填"
            android:textColor="#ff333333"
            android:textSize="16sp"
            />
        <ImageView
            android:visibility="gone"
            android:layout_marginEnd="15dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/arrow_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <RelativeLayout
        android:background="@drawable/shape_solid_fafafa_6_r"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="160dp">
        <EditText
            android:background="@color/lib_transparent"
            android:textColor="@color/lib_normal"
            android:textSize="15sp"
            android:maxLength="120"
            android:id="@+id/et_content"
            android:padding="10dp"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <TextView
            android:layout_margin="10dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:text="0/120"
            android:id="@+id/tv_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <View
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#fff5f5f5" />

    <RelativeLayout
        android:paddingStart="20dp"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:drawablePadding="10dp"
            android:drawableStart="@mipmap/camera_blue"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_photo"
            android:textColor="#ff333333"
            android:textSize="16sp"
            />

        <ImageView
            android:layout_marginEnd="15dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/arrow_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_photo"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_submit"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@color/lib_white"
        android:text="@string/submit"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/shape_solid_blue_6_r"
        android:layout_width="match_parent"
        android:layout_height="46dp"/>
</LinearLayout>
